<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_answer_linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/notification_answer_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.2"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/its_true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_size_1"/>

        <TextView
            android:id="@+id/notification_answer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:maxLength="@integer/max_message_length"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/main_green_color"
            android:textSize="@dimen/text_size_0"/>

    </LinearLayout>

    <Button
        android:id="@+id/notification_answer_goodAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:background="@drawable/green_button_background"
        android:text="@string/truth"
        android:textSize="@dimen/text_size_1"/>

    <Button
        android:id="@+id/notification_answer_badAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:background="@drawable/red_button_background"
        android:text="@string/nonsense"
        android:textSize="@dimen/text_size_1"/>

</LinearLayout>