<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green_color"
    android:fillViewport="true"
    tools:context="com.ruslan_hlushen.cleanroom.activities.RestorePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_email_for_restore_password"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/text_size_5"/>

            <EditText
                android:id="@+id/activity_restore_pasword_editText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_margin_3"
                android:layout_marginRight="@dimen/padding_margin_2"
                android:layout_marginTop="@dimen/padding_margin_6"
                android:hint="@string/e_mail"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/text_size_3"/>

            <TextView
                android:id="@+id/activity_restore_password_textView_Send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_buttons"
                android:layout_marginLeft="@dimen/padding_margin_5"
                android:layout_marginRight="@dimen/padding_margin_5"
                android:layout_marginTop="@dimen/padding_margin_7"
                android:background="@drawable/red_button_background"
                android:gravity="center"
                android:text="@string/send"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_5"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/activity_restore_password_progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/my_progress_bar"
            android:padding="@dimen/big_progress_padding"
            android:visibility="gone"/>
    </RelativeLayout>

</ScrollView>