<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green_color"
    android:orientation="vertical"
    tools:context=".activities.EnterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/main_green_color"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/enter_activity_imageView_Logo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_margin_1"
                android:layout_marginTop="@dimen/padding_margin_2"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher"/>

            <EditText
                android:id="@+id/login_EditTextToEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_margin_5"
                android:layout_marginRight="@dimen/padding_margin_5"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="@dimen/padding_margin_2"
                android:hint="@string/login"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>


            <EditText
                android:id="@+id/password_EditTextToEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_margin_5"
                android:layout_marginRight="@dimen/padding_margin_5"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="@dimen/padding_margin_2"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_margin_4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/padding_margin_2"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/remember"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_2"/>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:theme="@style/MyCheckBox"/>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/button_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_margin_4"
                card_view:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Войти"
                    android:textAllCaps="true"
                    android:textColor="@color/main_green_color"
                    android:textSize="@dimen/text_size_5"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/registration_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/padding_margin_4"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_3"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/forgotPassword_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="@dimen/padding_margin_4"
                    android:paddingRight="@dimen/padding_margin_4"
                    android:text="@string/restore_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_2"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/activity_enter_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/my_progress_bar"
        android:padding="@dimen/big_progress_padding"
        android:visibility="gone"/>

</RelativeLayout>